# ai-image-generator

./: .gitignore  =0.10.0  README.md  com.aiimagegenerator.app.desktop  main.py  pyproject.toml  requirements.txt
docs/: design.md
src/: __init__.py
src/app/: application.py
src/backends/: diffusers_backend.py  segmentation_backend.py  upscale_backend.py
src/core/: config.py  generation_service.py  gpu_manager.py  model_inspector.py  model_manager.py
src/ui/resources/: style.css
src/ui/resources/icons/hicolor/: index.theme
src/ui/screens/: setup_screen.py  work_screen.py
src/ui/widgets/: batch_settings.py  collapsible_panel.py  generation_params.py  generation_progress.py  image_display.py  info_helper.py  lora_selector.py  model_selector.py  prompt_entry.py  prompt_manager.py  prompt_section.py  thumbnail_gallery.py  toolbar.py  upscale_settings.py  vram_display.py
src/utils/: constants.py  file_utils.py  metadata.py
